--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "wamblog.github.io",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "wamblog.github.io",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "wooami",
+  "keywords": [
+    "gatsby"
+  ],
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
@@ -37,9 +40,6 @@
     "prettier": "^2.7.1",
     "typescript": "^4.7.4"
   },
-  "keywords": [
-    "gatsby"
-  ],
   "license": "0BSD",
   "scripts": {
     "build": "gatsby build",
