--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@types/react-helmet": "^6.1.5",
     "gatsby": "^4.17.0",
+    "gatsby-plugin-canonical-urls": "^4.17.0",
     "gatsby-plugin-emotion": "^7.17.0",
     "gatsby-plugin-image": "^2.17.0",
     "gatsby-plugin-offline": "^5.17.0",
