--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@parcel/namer-default": "^2.7.0",
     "@types/react-helmet": "^6.1.5",
     "gatsby": "^4.17.0",
     "gatsby-plugin-canonical-urls": "^4.17.0",
